When gfx::ElideText() is passed a fractional width, floor it instead of ceil.

It looks like ceil() was added because RenderText doesn't support
fractional widths (https://codereview.chromium.org/354963003). msw@
raised the concern that it might use more width than was available, and
that never got followup.

Becasue ElideFilename() passes a width to ElideText() that's based on
subtracting the size of the extension, the width may be fractional even
if the input width was not, and rounding up can use too much space and
cause clipping. floor() produces correct results, but it might still be
better to support fractional widths.

Bug: 764546
Change-Id: I1c3deb3553719830caf546413cee43970d80790e